Changelog Notes 1.1.3:
-Added sdl_partyeffect_texture_mapped enum, not completed for functionality
-Added extern SDL2_Party_Circle_Points for keeping track of how detailed circle render call is.
-Added SDL_RenderParty_Circle and SDL_RenderParty_SetCirclePoints function
-Seperated implementation into sdl_renderparty.c due to issues with single-file-header
-Arranged functions alphabetically
-Corrected define syntax
-Removed default parameter values to maintain C-style syntax
-Renamed sd2_renderparty_ex_h to SDL2_RENDERPARTY_HEADER
-Added SDL2_RENDERPARTY_CIRCLE_POINT_MIN

Changelog Notes 1.1.2:
-Various bug fixes

Changelog Notes 1.1.1:
-Various bug fixes

Changelog Notes 1.1.0:
-Various bug fixes 